[package]
name = "muni-tuber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
eframe = {version = "0.22.0", features = ["wayland", "wgpu"]}
egui_extras = {version = "0.22.0", features = ["image"]}
rand = "0.8.5"
